🐛 FIX: Add back overflow hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,7 @@ html,
 body {
     background-color: var(--primary-background-color);
     color: var(--primary-font-color);
+    overflow: hidden;
     max-width: 100vw;
     min-height: 100vh;
 }
